more work on site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <script src="site/build/build.js"></script>
 </head>
 <body>
-  <header></header>
+  <header class="Header">
+    <h1 class="Header-title logo" data-logo="Hermes"><span>Hermes</span></h1>
+    <h2 class="Header-subtitle">A friendly, pluggable chat bot.</h2>
+    <a class="Header-github-link" href="https://github.com/segmentio/hermes">Star on GitHub</a>
+  </header>
   <main></main>
   <footer></footer>
   <script>require('hermes');</script>
