--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,8 @@
 <div class="Shell">
   <menu class="Shell-menu">
-    <a class="Shell-menu-item">REPL</a>
+    <a class="Shell-menu-item active">Hermes</a>
   </menu>
   <ol class="Shell-panes">
-    <li class="Shell-pane"><div id="repl"></div></li>
+    <li class="Shell-pane active"><div id="repl"></div></li>
   </ol>
 </div>
