--- a/site/lib/plugin/index.html
+++ b/site/lib/plugin/index.html
@@ -1,3 +1,3 @@
-<div class="Plugin">
-  <textarea class="Plugin-editor"></textarea>
-</div>
+<li class="Shell-pane Plugin">
+  <textarea class="Plugin-editor">{{ code }}</textarea>
+</li>
