fixing up makefiles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Hermes</title>
   <link rel="stylesheet" href="site/build/build.css">
+  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6692672/688064/css/fonts.css" />
   <script src="site/build/build.js"></script>
 </head>
 <body>
