--- a/site/lib/repl/repl.html
+++ b/site/lib/repl/repl.html
@@ -6,7 +6,7 @@
     </li>
   </ol>
   <form class="Repl-form" on-submit="{{ this.submit }}">
-    <input class="Repl-input" type="text" placeholder="Talk here&hellip;">
+    <input class="Repl-input" type="text" placeholder="talk here&hellip;">
     <input class="Repl-submit" type="submit">
   </form>
 </div>
